--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,9 @@ inputs:
   webhook:
     description: "Space webhook endpoint. If not set, env.SPACE_WEBHOOK will be used."
     required: false
+  channel_id:
+    description: "Space webhook endpoint. If not set, env.SPACE_WEBHOOK will be used."
+    required: false
   permanent_token:
     description: "Space webhook token."
     required: false
